opam-version: "2.0"
version: "dev"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-dtools"
bug-reports: "https://github.com/savonet/ocaml-dtools/issues"
depends: ["ocaml" "ocamlfind"]
flags: light-uninstall
build: [
  ["./bootstrap"]
  ["./configure" "--prefix" prefix]
  [make "clean"]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "dtools"]
dev-repo: "git+https://github.com/savonet/ocaml-dtools.git"
