opam-version: "2.0"
name: "dtools"
version: "0.4.2"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-dtools"
bug-reports: "https://github.com/savonet/ocaml-dtools/issues"
depends: [
  "ocaml"
  "ocamlfind" {build}
]
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [make "install"]
synopsis: "Library providing various helper functions to make daemons"
dev-repo: "git+https://github.com/savonet/ocaml-dtools.git"
